--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - 'index.md'
       - 'stylesheets/**'
+      - '_config.yml'
+      - '_config.yaml'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
